--- a/css-lesson-01.html
+++ b/css-lesson-01.html
@@ -7,7 +7,7 @@
   	<title>CSS Lesson</title>
   	<meta name="keywords" content="lesson, HTML, Binghamton University">
   	<meta name="description" content="This is a basic intro to HTML coding.">
-  	<link rel="stylesheet" type="text/css" href="css/style.css"/>
+  	<link rel="stylesheet" type="text/css" href="css/css-lesson01.css"/>
 
   	<style type="text/css">
 
