css intro part 2 assignment

--- a/css-lesson-02.html
+++ b/css-lesson-02.html
@@ -20,7 +20,7 @@
 
     		<h1>Urban foxes may be self-domesticating in our midst</h1>
 
-    		<p>By Virginia Morell | Jun. 2, 2020 , 7:01 PM</p>
+    		<p class="byline">By Virginia Morell | Jun. 2, 2020 , 7:01 PM</p>
 
     		<img src="images/urban-fox.jpg" />
 
